add auditoria de estudiantes post examen y resolucion de examenes entre varios estudiantes